--- a/admin/styles/globals.css
+++ b/admin/styles/globals.css
@@ -2,24 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
-input, textarea {
+input,
+textarea {
   @apply border-2 rounded-md px-2 w-full mb-2;
 }
 
-.btn-primary{
+.btn-primary {
   @apply mt-4 bg-green-300 px-8 py-1 rounded-md text-lg;
 }
 
 table.basic {
-  @apply w-full 
+  @apply w-full;
 }
 
-thead
-{
-  @apply bg-blue-200
+thead {
+  @apply bg-blue-200;
 }
-table.basic, tr, td {
-  @apply border border-gray-300 p-1
+table.basic,
+tr,
+td {
+  @apply border border-gray-300 p-1;
+}
+
+table.basic a {
+  @apply bg-gray-300 text-sm py-1 px-2 rounded-md inline-flex gap-1;
 }
 /* input:focus, textarea:focus {
   @apply border-red-900;
